--- a/src/Product.css
+++ b/src/Product.css
@@ -22,7 +22,19 @@
   margin-top: 5px;
 }
 
+.product__rating {
+  display: flex;
+}
+
+.product > button {
+  background-color: #f0c14b;
+  border: 1px solid;
+  margin-top: 10px;
+  border-color: #a88734 #9c7e31 #846a29;
+  color: #111;
+}
 .product__info {
+  text-align: left;
   height: 100px;
   margin-bottom: 15px;
 }
